clusters/k8s-keiretsu/apps/code-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
spec:
  replicas: 1  # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
        - name: code-server
          image: lscr.io/linuxserver/code-server:latest  # Docker image for code-server
          ports:
            - containerPort: 8443  # Port inside the container (code-server default is 8443)
          # livenessProbe:
          #   httpGet:
          #     path: /healthz
          #     port: 8443
          #   periodSeconds: 10
          # readinessProbe:
          #   httpGet:
          #     path: /healthz
          #     port: 8443
          #   periodSeconds: 10
          volumeMounts:
            - name: startup-script
              mountPath: /custom-cont-init.d
            - name: nfs-proxmox
              mountPath: /mnt/proxmox
            - name: nfs-proxmox-hack
              mountPath: /mnt/proxmox-hack
            - name: config-volume
              mountPath: /config
      volumes:
        - name: startup-script
          configMap:
            name: startup-script
            defaultMode: 0755  # Set the permissions for the files in the ConfigMap
        - name: nfs-proxmox
          nfs:
            path: /mnt/tank/k8s
            server: 192.168.50.59
        - name: nfs-proxmox-hack
          nfs:
            path: /vault/k8s
            server: 192.168.50.253
        - name: config-volume
          persistentVolumeClaim:
            claimName: code-server-config
      restartPolicy: Always  # Restart policy for the pod
