clusters/k8s-keiretsu/apps/code-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server-tls
  namespace: external-name
  annotations:
    cert-manager.io/cluster-issuer: raj-issuer
    kubernetes.io/tls-acme: "true"
    haproxy.org/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: code-server.rajsingh.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: code-server-svc
                port:
                  number: 8443
  tls:
    - secretName: code-server-raj-tls
      hosts:
        - code-server.rajsingh.info
